added icons and try to fix start url

--- a/manifest.json
+++ b/manifest.json
@@ -3,33 +3,12 @@
   "name": "CAS Brick Breake Vue PWA",
   "icons": [
     {
-      "src": "./src/assets/img/icons/favicon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "./src/assets/img/icons/favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "./src/assets/img/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./src/assets/img/icons/android-chrome-512x512.png",
+      "src": "./src/assets/img/icons/brick-breaker.png",
       "sizes": "512x512",
       "type": "image/png"
-    },
-    {
-      "src": "./src/assets/img/icons/maskable_icon.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "background_color": "#333333",
   "theme_color": "#333333",
   "display": "standalone",
