--- a/firebase.json
+++ b/firebase.json
@@ -32,7 +32,7 @@
          ]
        },
        {
-         "source": "service-worker.js",
+         "source": "./service-worker.js",
          "headers": [
            {
              "key": "Cache-Control",
