--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "vite": "^4.4.9",
-    "vite-plugin-pwa": "^0.17.4"
+    "vite": "^4.4.9"
   }
 }
