--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "firebase": "^10.7.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
+    "vue-router": "^4.2.4"
+  },
+  "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
     "vite": "^4.4.9",
-    "vite-plugin-pwa": "^0.17.4"
+    "vite-plugin-pwa": "^0.17.4",
+    "workbox-window": "^7.0.0"
   }
 }
